# resume-improver

./: README.md  hello.py  pyproject.toml
app/: crawler.py  main.py  resume_improver.py  tuner.py
app/static/cv_templates/: 1.html
app/static/styles/: output.css
app/templates/components/: create-pdf-in-progress.html  cv-tuning-in-progress.html  cv-tuning-response.html
app/templates/cv_templates/: 1.html
app/templates/pages/: home.html  improved-resume.html
app/templates/resumes/: 2.html
app/templates/shared/: base.html
