[project]
name = "jobseek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "instructor>=1.8.1",
    "openai>=1.78.1",
    "pydantic>=2.11.4",
    "python-multipart>=0.0.20",
    "weasyprint>=65.1",
]
